apps/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: nginx-app, namespace: parcial-dryca}
spec:
  replicas: 1
  selector: {matchLabels: {app: nginx-app}}
  template:
    metadata: {labels: {app: nginx-app}}
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports: [{containerPort: 80}]
---
apiVersion: v1
kind: Service
metadata: {name: nginx-svc, namespace: parcial-dryca}
spec:
  selector: {app: nginx-app}
  ports: [{port: 80, targetPort: 80}]
---
apiVersion: apps/v1
kind: Deployment
metadata: {name: httpd-app, namespace: parcial-dryca}
spec:
  replicas: 1
  selector: {matchLabels: {app: httpd-app}}
  template:
    metadata: {labels: {app: httpd-app}}
    spec:
      containers:
        - name: httpd
          image: httpd:alpine
          ports: [{containerPort: 80}]
---
apiVersion: v1
kind: Service
metadata: {name: httpd-svc, namespace: parcial-dryca}
spec:
  selector: {app: httpd-app}
  ports: [{port: 80, targetPort: 80}]
---
apiVersion: apps/v1
kind: Deployment
metadata: {name: whoami-app, namespace: parcial-dryca}
spec:
  replicas: 1
  selector: {matchLabels: {app: whoami-app}}
  template:
    metadata: {labels: {app: whoami-app}}
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports: [{containerPort: 80}]
---
apiVersion: v1
kind: Service
metadata: {name: whoami-svc, namespace: parcial-dryca}
spec:
  selector: {app: whoami-app}
  ports: [{port: 80, targetPort: 80}]
---
apiVersion: apps/v1
kind: Deployment
metadata: {name: hello-app, namespace: parcial-dryca}
spec:
  replicas: 1
  selector: {matchLabels: {app: hello-app}}
  template:
    metadata: {labels: {app: hello-app}}
    spec:
      containers:
        - name: hello
          image: nginxdemos/hello
          ports: [{containerPort: 80}]
---
apiVersion: v1
kind: Service
metadata: {name: hello-svc, namespace: parcial-dryca}
spec:
  selector: {app: hello-app}
  ports: [{port: 80, targetPort: 80}]
