apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: parcial-dryca
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: nginx.dryca.test
      http:
        paths:
          - {path: /, pathType: Prefix, backend: {service: {name: nginx-svc, port: {number: 80}}}}
    - host: httpd.dryca.test
      http:
        paths:
          - {path: /, pathType: Prefix, backend: {service: {name: httpd-svc, port: {number: 80}}}}
    - host: whoami.dryca.test
      http:
        paths:
          - {path: /, pathType: Prefix, backend: {service: {name: whoami-svc, port: {number: 80}}}}
    - host: hello.dryca.test
      http:
        paths:
          - {path: /, pathType: Prefix, backend: {service: {name: hello-svc, port: {number: 80}}}}
